Add icons, fix visualizations for TreeMaps, and fix display of double arguments